# oop_lab4

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
tests/: array_test.cpp  figure_test.cpp  hexagon_test.cpp  octagon_test.cpp  pentagon_test.cpp  point_test.cpp
